infra/k8s/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxi-service-exp-application
