infra/k8s/api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxi-service-exp-application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxi-service-exp-deployment
  namespace: taxi-service-exp-application
  labels:
    app: taxi-service-exp-deployment
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: taxi-service-exp
  template:
    metadata:
      labels:
        app: taxi-service-exp
        version: "1.0"
    spec:
      containers:
        - name: taxi-service-exp
          image: jacksonveroneze/taxi-service-exp-service:0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: 100m
            requests:
              memory: 256Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: taxi-service-exp-service
  namespace: taxi-service-exp-application
spec:
  type: NodePort
  selector:
    app: taxi-service-exp
    version: "1.0"
  ports:
    - name: taxi-service-exp-service-port
      protocol: TCP
      port: 8084
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ingress
  namespace: taxi-service-exp-application
  annotations:
    #    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: stock-ingress
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: taxi-service-exp-service
                port:
                  number: 8084
